# logfw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example0.cpp  static_string.hpp  test1.cpp
include/logfw/: arg_io.hpp  atomic_buffer.hpp  common.hpp  compiler.hpp  decoder.hpp  encoder.hpp  fmt.hpp  format_visitor.hpp  make_format.hpp  meta.hpp  print.hpp  string_view.hpp  type_format.hpp  type_string.hpp  write.hpp
include/logfw/detail/: encode_impl.hpp  meta.hpp  type_format.hpp  write_impl.hpp
include/logfw/details/: encode_impl.hpp  meta.hpp  type_format.hpp  write_impl.hpp
